[package]
name = "ruzim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
env_logger = "0.11.3"
log = "0.4.21"
tiny_http = "0.12.0"
zim = "0.4.0"
